--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2889,10 +2889,22 @@
    "id": "6152551a",
    "metadata": {},
    "source": [
-    "1) The Charter School type has a significantly higher % Overall Passing than the District School type. Further, the top five schools are Charter, whereas the bottom 5 schools are District - out of 15 total Schools, suggesting that the disparity is black and white. \n",
+    "#### Summary of Data \n",
+    "----\n",
+    "Overall the analysis illustrates the performance of different schools by district, budget per student, school size, and grade. \n",
     "\n",
-    "2) The data suggest that school size may be correlated with performance, with smaller to medium sized schools out-performing larger schools (2000 - 5000 students). However, due to a low sample size of n =15, more rigourous analyiss may need to be done to confirm the above. "
+    "The main conclusions are:\n",
+    "\n",
+    "1) The Charter School type has a significantly higher % Overall Passing than the District School type. Further, the top five schools are Charter, whereas the bottom 5 schools are District - out of 15 total Schools - supporting this conclusion. \n",
+    "\n",
+    "2) The data suggest that school size may be correlated with performance, with smaller to medium sized schools out-performing larger schools (2000 - 5000 students). However, due to a low sample size of n =15, more rigourous analyis is warranted. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aef91e9f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
